test/preprocessor/valid/line.glsl
#define THIRTY 30
#define SIXTY 60
#define LINE THIRTY SIXTY
#line LINE
#line SIXTY
int a;