test/preprocessor/invalid/line.glsl
#define TOO_LONG 10 20 30
#line TOO_LONG
#line
#line a b
#line 1 b
#line a 1